After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728889 - context-manager: Fix a memory leak of network devices
context-manager: Fix a memory leak of network devices
Status: RESOLVED FIXED
Product: GUPnP
Classification: Other
Component: gupnp
unspecified
Other All
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-24 16:02 UTC by Philip Withnall
Modified: 2014-04-25 07:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
context-manager: Fix a memory leak of network devices (806 bytes, patch)
2014-04-24 16:02 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2014-04-24 16:02:05 UTC
Trivial patch.
Comment 1 Philip Withnall 2014-04-24 16:02:07 UTC
Created attachment 275064 [details] [review]
context-manager: Fix a memory leak of network devices
Comment 2 Jens Georg 2014-04-25 06:49:07 UTC
Review of attachment 275064 [details] [review]:

Whoops. +1
Comment 3 Philip Withnall 2014-04-25 07:37:03 UTC
Attachment 275064 [details] pushed as a209644 - context-manager: Fix a memory leak of network devices