context-manager: Fix a memory leak of network devices

https://bugzilla.gnome.org/show_bug.cgi?id=728889